--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <script>
             particlesJS.load('particles-js', 'particles.json', function(){
-            console.log('particles.json loaded...');
+            console.log('particles.json loaded successfully...');
             });
         </script>
 
@@ -58,7 +58,7 @@
                             </a>
                         </li>
                     </ul>
-                    </div>
+                </div>
         </div>     
     </body>
 </html>
